--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start"
+        "start": "next start",
+        "build:server": "tsc -p ./server/",
+        "start:server": "node server/dist/server.js",
+        "watch": "tsc -w -p ./server/",
+        "dev:server": "nodemon server/dist/server.js"
     },
     "dependencies": {
         "@apollo/client": "^3.3.15",
         "@ideasio/add-to-homescreen-react": "^1.0.7",
         "apollo-server-micro": "^2.23.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
         "graphql": "^15.5.0",
         "mongoose": "^5.9.13",
         "next": "10.2.0",
@@ -32,6 +38,8 @@
         "nexus": "^1.0.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "socket.io": "^4.1.1",
+        "socket.io-client": "^4.1.1",
         "swr": "0.5.6"
     },
     "peerOptionalDependencies": {
@@ -39,13 +47,16 @@
     },
     "license": "no-liscense",
     "devDependencies": {
+        "@types/express": "^4.17.11",
         "@types/next-auth": "^3.7.2",
         "@types/node": "^15.0.2",
         "@types/react": "^17.0.3",
+        "@types/socket.io": "^2.1.13",
         "@typescript-eslint/eslint-plugin": "^4.18.0",
         "@typescript-eslint/parser": "^4.18.0",
         "eslint": "^7.22.0",
         "eslint-plugin-react": "^7.22.0",
+        "nodemon": "^2.0.7",
         "prettier": "^2.2.1",
         "typescript": "^4.2.3"
     }
