Add one way real time message

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,21 @@
+# Database stuff
+
 DATABASE_URL=""
+
+# Auth stuff
 
 NEXTAUTH_URL="http://localhost:3000"
 AUTH_SECRET=""
 JWT_SECRET=""
+
+# Email stuff
 
 EMAIL_SERVER_USER=""
 EMAIL_SERVER_PASSWORD=""
 EMAIL_SERVER_HOST="smtp.example.com"
 EMAIL_SERVER_PORT=587
 EMAIL_FROM="noreply@gmail.com"
+
+# Backend conf
+
+BACKEND_URL="http://localhost:8000"
