--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,4 @@ EMAIL_FROM="noreply@gmail.com"
 
 # Backend conf
 
-BACKEND_URL="http://localhost:8000"
+NEXT_PUBLIC_BACKEND_URL="http://localhost:8000/"
