Add chat rooms and one2one messages

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,6 +8,6 @@
         "rootDir": "./",
         "moduleResolution": "node"
     },
-    "include": ["./"],
+    "include": ["./server.ts"],
     "exclude": ["./dist/"]
 }
