--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "react-dom": "^17.0.1",
         "socket.io": "^4.1.1",
         "socket.io-client": "^4.1.1",
-        "swr": "0.5.6"
+        "swr": "0.5.6",
+        "uuid": "^8.3.2"
     },
     "peerOptionalDependencies": {
         "mongodb": "^3.6.5"
