--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "socket.io": "^4.1.1",
         "socket.io-client": "^4.1.1",
         "swr": "0.5.6",
-        "uuid": "^8.3.2"
+        "uuidv4": "^6.2.8"
     },
     "peerOptionalDependencies": {
         "mongodb": "^3.6.5"
