--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "nexus": "^1.0.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "reactstrap": "^8.9.0",
         "socket.io": "^4.1.1",
         "socket.io-client": "^4.1.1",
         "swr": "0.5.6",
