--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
         "@apollo/client": "^3.3.15",
         "@ideasio/add-to-homescreen-react": "^1.0.7",
         "apollo-server-micro": "^2.23.0",
+        "apos-to-lex-form": "^1.0.5",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "graphql": "^15.5.0",
         "mongoose": "^5.9.13",
+        "natural": "^5.0.3",
         "next": "10.2.0",
         "next-auth": "^3.13.2",
         "next-pwa": "^5.0.6",
@@ -41,6 +43,8 @@
         "reactstrap": "^8.9.0",
         "socket.io": "^4.1.1",
         "socket.io-client": "^4.1.1",
+        "spelling-corrector": "^3.0.0",
+        "stopword": "^1.0.7",
         "swr": "0.5.6",
         "uuidv4": "^6.2.8"
     },
@@ -49,10 +53,12 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.11",
+        "@types/natural": "^2.1.1",
         "@types/next-auth": "^3.7.2",
         "@types/node": "^15.0.2",
         "@types/react": "^17.0.3",
         "@types/socket.io": "^2.1.13",
+        "@types/stopword": "^1.0.0",
         "@typescript-eslint/eslint-plugin": "^4.18.0",
         "@typescript-eslint/parser": "^4.18.0",
         "eslint": "^7.22.0",
