--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "graphql": "^15.5.0",
+        "md5": "^2.3.0",
         "mongoose": "^5.9.13",
         "natural": "^5.0.3",
         "next": "10.2.0",
@@ -38,6 +39,7 @@
         "next-pwa": "^5.0.6",
         "nextjs-progressbar": "^0.0.9",
         "nexus": "^1.0.0",
+        "peerjs": "^1.3.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "reactstrap": "^8.9.0",
